force-app/main/default/objects/Grille_TRV__mdt/Grille_TRV__mdt.object-meta.xml
<CustomObject>
    <label>Grille TRV</label>
    <pluralLabel>Grilles TRV</pluralLabel>
</CustomObject>