force-app/main/default/objects/Grille_TRV__mdt/fields/Prix_CEE__c.field-meta.xml
<CustomField>
    <fullName>Prix_CEE__c</fullName>
    <label>Prix CEE</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>