force-app/main/default/objects/Grille_TRV__mdt/fields/Prix_HP_MWh__c.field-meta.xml
<CustomField>
    <fullName>Prix_HP_MWh__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prix HP (€/MWh)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>